[package]
name = "moonlab-sys"
version = "1.2.0"
edition = "2021"
rust-version = "1.86"
authors = ["Moonlab Team"]
description = "Low-level FFI bindings to the Moonlab quantum simulator C library"
license = "MIT"
repository = "https://github.com/tsotchke/moonlab"
keywords = ["quantum", "simulator", "ffi", "bindings"]
categories = ["science", "simulation"]
readme = "README.md"
links = "quantumsim"

[lib]
name = "moonlab_sys"
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
pkg-config = "0.3"

[features]
default = []
gpu = []  # Enable GPU acceleration bindings

[lints.rust]
unsafe_code = "allow"  # FFI bindings require unsafe

[lints.clippy]
all = "warn"
# FFI bindings have many patterns clippy dislikes
missing_safety_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
