[package]
name = "moonlab-tui"
version = "1.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["Moonlab Team"]
description = "Beautiful terminal UI for Moonlab quantum simulator"
license = "MIT"
repository = "https://github.com/tsotchke/moonlab"
keywords = ["quantum", "tui", "terminal", "simulator"]
categories = ["science", "visualization", "command-line-utilities"]
readme = "README.md"
build = "build.rs"

[[bin]]
name = "moonlab"
path = "src/main.rs"

[dependencies]
moonlab = { version = "1.1.0", path = "../moonlab" }

# TUI Framework (pinned to versions compatible with rustc 1.86)
ratatui = "0.26"
crossterm = "0.27"

# Async runtime for responsive UI
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
