[package]
name = "moonlab"
version = "0.1.1"
edition = "2021"
authors = ["Moonlab Team"]
description = "Safe, idiomatic Rust bindings for the Moonlab quantum simulator"
license = "Apache-2.0"
repository = "https://github.com/tsotchke/moonlab"
keywords = ["quantum", "simulator", "computing", "physics"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
moonlab-sys = { path = "../moonlab-sys" }
thiserror = "2.0"
num-complex = "0.4"
rand = "0.8"
libc = "0.2"

[dev-dependencies]
approx = "0.5"

[features]
default = []

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow certain patterns common in FFI bindings
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
